--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -1,4 +1,4 @@
-<div class="blogs">
+<div class="blog">
     <div class="banner">
        <div class="container">
           <div class="blog-layout1">
@@ -7,29 +7,15 @@
           </div>
        </div>
     </div>
-    <div class="blog-layout2">
+    <div class="blogs">
        <div class="container">
           <div class="row">
-             <div class="col-md-4 image-center">
+             <div class="col-md-4  image-center" *ngFor="let blog of blogs">
                 <div class="blogs-image">
-                   <img src="./assets/images/home/image3.png">
+                   <img [src]="blog.imgURL">
                 </div>
-                <h5>Designing a successful product: Is not a daydream</h5>
-                <span>by Udaya Kumar Sivagurunathan </span>
-             </div>
-             <div class="col-md-4 image-center">
-                <div class="blogs-image">
-                   <img src="./assets/images/home/image1.png">
-                </div>
-                <h5>How to experience Five Senses — in Digital Commerce</h5>
-                <span>by Veera Thiruppal</span>
-             </div>
-             <div class="col-md-4 image-center">
-                <div class="blogs-image">
-                   <img src="./assets/images/home/image2.png">
-                </div>
-                <h5>Ever thought why does the colour green or sound of water brings calmness?</h5>
-                <span>by Krithika Thirunavukkarasu</span>
+                <h5><a [href]="blog.url" target="_blank">{{ blog.description }}</a></h5>
+                 <span>{{ blog.name }}</span> 
              </div>
           </div>
        </div>
