--- a/src/app/components/works/works.component.html
+++ b/src/app/components/works/works.component.html
@@ -35,7 +35,7 @@
          <div class="work-left">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-6 ordertwo">
                      <div class="left-content">
                         <h2>Digital 
                            <br>Transformation 
@@ -44,7 +44,7 @@
                         <div class="btn outline-btn" routerLink="/work/networking">Case Study</div>
                      </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-6 orderone">
                      <div class="right-image">
                         <img src="./assets/images/works/network1.webp">
                      </div>
@@ -55,14 +55,14 @@
          <div class="work-right">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6 ordertwo">
+                  <div class="col-md-6 orderone">
                      <div class="left-image">
                         <img src="./assets/images/works/works2.png">
                      </div>
                   </div>
-                  <div class="col-md-6 orderone">
+                  <div class="col-md-6 ordertwo">
                      <div class="container">
-                        <div class="right-content text-right">
+                        <div class="right-content ">
                            <h2>Event Hosting 
                             <br>made stressless</h2>
                            <p>UX . UI . Web . Mobile . B2C</p>
@@ -77,7 +77,7 @@
          <div class="work-left">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-6 ordertwo">
                      <div class="left-content">
                         <h2>To adapt
                            organic food
@@ -86,7 +86,7 @@
                         <div class="btn outline-btn" routerLink="/work/health-care">Case Study</div>
                      </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-6 orderone">
                      <div class="right-image">
                         <img src="./assets/images/works/works3.png">
                      </div>
@@ -98,14 +98,14 @@
          <div class="work-right">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6 ordertwo">
+                  <div class="col-md-6 orderone">
                      <div class="left-image">
                         <img src="./assets/images/works/works4.png">
                      </div>
                   </div>
-                  <div class="col-md-6 orderone">
+                  <div class="col-md-6 ordertwo">
                      <div class="container">
-                        <div class="right-content text-right">
+                        <div class="right-content">
                            <h2>Website for Startup</h2>
                            <p>UX . UI . B2C</p>
                            <div class="btn outline-btn" routerLink="/work/uxahead">Case Study</div>
@@ -119,14 +119,14 @@
          <div class="work-left">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-6 ordertwo">
                      <div class="left-content">
                         <h2>A designers platform for creative upskill</h2>
                         <p>UX . UI . Mobile . Web . B2C</p>
                         <div class="btn outline-btn" routerLink="/work/skill-development">Case Study</div>
                      </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-6 orderone">
                      <div class="right-image">
                         <img src="./assets/images/works/works5.webp">
                      </div>
@@ -137,14 +137,14 @@
          <div class="work-right">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6 ordertwo">
+                  <div class="col-md-6 orderone">
                      <div class="left-image">
                         <img src="./assets/images/works/works6.png">
                      </div>
                   </div>
-                  <div class="col-md-6 orderone">
+                  <div class="col-md-6 ordertwo">
                      <div class="container">
-                        <div class="right-content text-right">
+                        <div class="right-content">
                            <h2>Child Care Portal</h2>
                            <p>UX . UI . Mobile . Web . B2C</p>
                            <div class="btn outline-btn" routerLink="/work/childcare-portal">Case Study</div>
@@ -158,14 +158,14 @@
          <div class="work-left">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-6 ordertwo">
                      <div class="left-content">
                         <h2>A Customer Advocacy Platform </h2>
                         <p>UX . UI . Web . B2B2C</p>
                         <div class="btn outline-btn" routerLink="/work/marketing">Case Study</div>
                      </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-6 orderone">
                      <div class="right-image">
                         <img src="./assets/images/works/market1.webp">
                      </div>
@@ -176,14 +176,14 @@
          <div class="work-right">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6 ordertwo">
+                  <div class="col-md-6 orderone">
                      <div class="left-image">
                         <img src="./assets/images/works/works8.png">
                      </div>
                   </div>
-                  <div class="col-md-6 orderone">
+                  <div class="col-md-6 ordertwo">
                      <div class="container">
-                        <div class="right-content text-right">
+                        <div class="right-content">
                            <h2>Automobile Usability
                               Testing</h2>
                            <p>UUX . UI . Web .Mobile . B2C</p>
@@ -198,14 +198,14 @@
          <div class="work-left">
             <div class="container">
                <div class="row">
-                  <div class="col-md-6">
+                  <div class="col-md-6 ordertwo">
                      <div class="left-content">
                         <h2>Repository of Accomplishments</h2>
                         <p>UX . UI . Web . B2C</p>
                         <div class="btn outline-btn" routerLink="/work/construction-portal">Case Study</div>
                      </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-6 orderone">
                      <div class="right-image">
                         <img src="./assets/images/works/works9.png">
                      </div>
