--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -21,7 +21,7 @@
          <div class="col-md-6 design-layouts">
            <div class="container">
               <div class="row">
-               <div class="col-md-6">  
+               <div class="col-md-5">  
             <div class="design-right">
                 <ul class="logo">
                 <li>
@@ -36,7 +36,7 @@
             </ul>
          </div>
          </div>
-         <div class="col-md-6">  
+         <div class="col-md-5">  
             <div class="design-right img_cover">
                 <ul class="logo">
                 <li>
@@ -100,7 +100,7 @@
               <li ngbNavItem class="design-rights">
                 <a ngbNavLink> <svg xmlns="http://www.w3.org/2000/svg" width="16.546" height="17.825" viewBox="0 0 16.546 17.825"> <g id="Group_5633" data-name="Group 5633" transform="translate(15.131 1) rotate(90)"> <path id="Path_9437" data-name="Path 9437" d="M-11459.344,11612.816h15.825l-6.716,6.716" transform="translate(11459.344 -11605.815)" fill="none" stroke="#C3343C" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> <path id="Path_9438" data-name="Path 9438" d="M-11456.344,11615.815l-3-3" transform="translate(11468.453 -11612.814)" fill="none" stroke="#C3343C" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"/> </g> </svg></a>
                 <ng-template ngbNavContent><h5>Established Brands</h5>
-                  <p>We work with mid-size or large organisations in designing or redesigning complex systems. Optimising the process to bring transformation to the legacysystem.</p></ng-template>
+                  <p>We have worked with SMB & Enterprises for ground-up projects as well as for  redesigning existing complex systems. We coax with the internal teams to understand the current process of the legacy systems bring a radical transformation of design.</p></ng-template>
               </li>
             </ul>
             </div>
