--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -391,7 +391,7 @@
                   <div class="image">
                      <img [src]="item.img">
                   </div>
-                  <h3>{{ item.title }}</h3>
+                  <h3><a [href]="item.url" target="_blank">{{ item.title }}</a></h3>
                   <h4>{{ item.sub }}</h4>
                </div>
             </ngu-tile>
