--- a/src/app/components/works/works.component.scss
+++ b/src/app/components/works/works.component.scss
@@ -150,7 +150,7 @@
         }
         .right-image{
             img{
-                width: 97%;
+                width: 95%;
                 padding-top: 120px;
                 margin-left: 30px;
             }
@@ -312,9 +312,11 @@
               margin-left: -10px;
             }
         }
+        
         .work-right{
             .right-content{
             margin-left: -30px;
+            padding: 40px 0px;
         }
     }
 }
