UI & form validation fixes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -66,13 +66,13 @@
             <h5>For a quick response</h5>
             <ul>
                 <li>
-                    <a routerLink="mailto:enquire@uxmint.in" (click)="activeModal.close()">hello@uxmint.in</a>
+                    <a href="mailto:hello@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a>
                 </li>
                 <li>
-                    <a routerLink="tel:+91 9884053886" (click)="activeModal.close()">+91 9884053886</a>
+                    <a href="tel:+91 9884053886">+91 9884053886</a>
                 </li>
                 <li>
-                    <a routerLink="tel:+91 9940410072" (click)="activeModal.close()">+91 9940410072</a>
+                    <a href="tel:+91 9940410072">+91 9940410072</a>
                 </li>
             </ul>
         </div>
@@ -80,10 +80,10 @@
             <h5>Follow Us On</h5>
             <ul>
                 <li>
-                    <a href="https://www.linkedin.com/school/uxmint"> <img src="./assets/images/linkedin1.svg"></a>
+                    <a href="https://www.linkedin.com/school/uxmint" target="_blank"> <img src="./assets/images/linkedin1.svg"></a>
                 </li>
                 <li>
-                    <a href="https://medium.com/uxmint"> <img src="./assets/images/medium1.svg" class="medium"></a>
+                    <a href="https://medium.com/uxmint" target="_blank"> <img src="./assets/images/medium1.svg" class="medium"></a>
                 </li>
             </ul>
         </div>
