--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -102,7 +102,7 @@
             <h2>Contact Us</h2>
             <ul class="contact">
                 <li>
-                    <a href="mailto:enquire@uxmint.in">hello@uxmint.in</a>
+                    <a href="mailto:hello@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a>
                 </li>
                 <li>
                     <a href="tel:+91 9884053886">+91 9884053886</a>
