--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -3,7 +3,7 @@
       <div class="container">
          <div class="contact-layout">
             <h1>We are eager to <span> get in touch </span><br> with you as well </h1>
-            <h6>you can drop us an email at <span> <a href="mailto:enquire@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a></span></h6>
+            <h6>you can drop us an email at <span> <a href="mailto:hello@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a></span></h6>
          </div>
       </div>
    </div>
@@ -12,7 +12,7 @@
          <div class="container">
          <div class="layouts">
             <h2>Let us Know what you are looking <br> forward to discuss.</h2>
-            <form [formGroup]="form" id="contactForm" name="contactForm" class="contactForm">
+            <form [formGroup]="form" id="contactForm" name="contactForm" class="contactForm" autocomplete="off">
                <div class="row  layout-right">
                   <div class="col-md-5"  *ngFor="let position of positions">
                      <div class="custom-control custom-checkbox custom-control-inline">
@@ -27,12 +27,15 @@
                         <label class="label" for="name">Name</label>
                         <input type="text" class="form-control" formControlName="name" name="name" id="name" placeholder=" Your name">
                      </div>
+                     <div *ngIf="hasError('name','required')" class="form-text">Please enter Name</div>
                   </div>
                   <div class="col-md-5">
                      <div class="form-group bg-light">
                         <label class="label" for="email">Email </label>
                         <input type="email" class="form-control" formControlName="email" name="email" id="email" placeholder=" Your@email.com">
                      </div>
+                     <div *ngIf="hasError('email','email')" class="form-text">Please enter valid email ID</div>
+                     <div *ngIf="hasError('email', 'required')" class="form-text">Please enter email ID</div>
                   </div>
                </div>
                <div class="row">
@@ -41,12 +44,15 @@
                         <label class="label" for="phone">Phone</label>
                         <input type="text" class="form-control" formControlName="phone" name="phone" id="phone" placeholder=" Your phone number">
                      </div>
+                     <div *ngIf="hasError('phone','required')" class="form-text">Please enter Mobile number</div>
+                     <div *ngIf="hasError('phone','pattern')" class="form-text">Please enter valid Mobile number</div>
                   </div>
                   <div class="col-md-5">
                      <div class="form-group bg-light">
                         <label class="label" for="business">Business/ Organisation</label>
                         <input type="text" class="form-control" formControlName="business" name="business" id="business" placeholder=" Your Business/Organisation">
                      </div>
+                     <div *ngIf="hasError('business','required')" class="form-text">Please enter Business/ Organisation</div>
                   </div>
                </div>
                <div class="row">
