--- a/src/app/components/contact/contact.component.scss
+++ b/src/app/components/contact/contact.component.scss
@@ -338,7 +338,7 @@ p{
     font-size: 20px;
     background-color: #f8f9fa;
     padding-left: 5px;
-    transition: none !important;
+    box-shadow: none !important;
 }
 .label{
     color: #282829;
@@ -351,3 +351,6 @@ iframe {
     width:100%;
     height:560px;
   }
+  .form-text {
+    color: #dc3545;
+}
