--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,7 +111,7 @@
                     <a href="tel:+91 9940410072">+91 9940410072</a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/school/uxmint">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint">Medium</a>
+                    <a href="https://www.linkedin.com/school/uxmint" target="_blank">Linkedin</a> <span>|</span> <a href="https://medium.com/uxmint" target="_blank">Medium</a>
                 </li>
                 <!-- <li>
                     <a href="https://medium.com/uxmint">Medium</a>
