--- a/src/app/components/blogs/blogs.component.html
+++ b/src/app/components/blogs/blogs.component.html
@@ -14,8 +14,8 @@
                 <div class="blogs-image">
                    <img [src]="blog.imgURL">
                 </div>
-                <h5><a [href]="blog.url" target="_blank">{{ blog.description }}</a></h5>
-                 <span>{{ blog.name }}</span> 
+                <a [href]="blog.url" target="_blank">{{ blog.description }}</a>
+                <h6>{{ blog.name }}</h6>
              </div>
           </div>
        </div>
