--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -74,21 +74,23 @@
          </div>
       </div>
    <div class="contact-layout2">
-      <div class="row">
-         <div class="col-md-6">
-            <div class="layout-left">
-               <h3>
-                  you can drop in to the premises <br> between 10.00 AM to 6.00 PM, <br> Monday to Friday
-               </h3>
-               <p>
-                  Plot no, 16, Nethaji Street,<br> Annai Indira Nagar, Okkiyam, Thoraipakkam,<br> Chennai, Tamilnadu - 600096
-               </p>
-               <h4>Landmark: Opp to Holiday Inn</h4>
+      <div class="container">
+         <div class="row">
+            <div class="col-md-6">
+               <div class="layout-left">
+                  <h3>
+                     you can drop in to the premises <br> between 10.00 AM to 6.00 PM, <br> Monday to Friday
+                  </h3>
+                  <p>
+                     Plot no, 16, Nethaji Street,<br> Annai Indira Nagar, Okkiyam, Thoraipakkam,<br> Chennai, Tamilnadu - 600096
+                  </p>
+                  <h4>Landmark: Opp to Holiday Inn</h4>
+               </div>
             </div>
-         </div>
-         <div class="col-md-6 only-mobile">
-            <div class="map-route">
-               <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15554.638548413615!2d80.2329289!3d12.9295839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd520a88b9abf07ec!2sUXMINT!5e0!3m2!1sen!2sin!4v1617021616096!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+            <div class="col-md-6 only-mobile">
+                  <div class="map-route">
+                     <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15554.638548413615!2d80.2329289!3d12.9295839!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xd520a88b9abf07ec!2sUXMINT!5e0!3m2!1sen!2sin!4v1617021616096!5m2!1sen!2sin" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                  </div>
             </div>
          </div>
       </div>
