--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.html
@@ -2,7 +2,7 @@
     <div class="banner">
        <div class="container">
              <h1>Drop in your detail <br> if you want to be <span> a part of us</span> </h1>
-             <h4>Candidates can share their resume with portfolio to  <span routerLink="/works">work@uxmint.in</span></h4>
+             <h4>Candidates can share their resume with portfolio to  <span><a href="mailto:hello@uxmint.in?subject=Query and Collabration!">hello@uxmint.in</a></span></h4>
           
        </div>
     </div>
@@ -34,7 +34,7 @@
                       - Degree in Fine Art, Vis. Comm, Media & Studies, Product Design is<br>preferred.
                    </p>
                    <div class="button">
-                      <div class="btn btn-white"><a href="https://www.linkedin.com/jobs/view/2803996787">Apply</a></div>
+                      <div class="btn btn-white"><a href="https://www.linkedin.com/jobs/view/2803996787" target="_blank">Apply</a></div>
                    </div>
                 </div>
              </div>
