--- a/src/app/components/career/career.component.scss
+++ b/src/app/components/career/career.component.scss
@@ -23,7 +23,7 @@
             color: #3B3B3B;
             padding-top: 25px;
             font-family: Muli;
-            span{
+            span a{
                 color: #C3343C;
                 text-decoration: underline;
                 cursor: pointer;
