--- a/src/app/modules/career/components/job-apply/job-apply.component.scss
+++ b/src/app/modules/career/components/job-apply/job-apply.component.scss
@@ -22,7 +22,7 @@
             color: #3B3B3B;
             padding-top: 25px;
             font-family: Muli;
-            span{
+            span a{
                 color: #C3343C;
                 text-decoration: underline;
             }
