--- a/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
+++ b/src/app/modules/career/components/ui-job-description/ui-job-description.component.scss
@@ -20,7 +20,7 @@
             color: #3B3B3B;
             padding-top: 25px;
             font-family: Muli;
-            span{
+            span a{
                 color: #C3343C;
                 text-decoration: underline;
                 cursor: pointer;
