--- a/src/app/modules/work/components/uxahead/uxahead.component.scss
+++ b/src/app/modules/work/components/uxahead/uxahead.component.scss
@@ -390,6 +390,9 @@ h6{
                 font-size: 36px;
                 font-family: Baskerville;
                 margin: 40px 130px 20px 40px;
+                a{
+                    color: #3B3B3B; 
+                   }
             }
             h4{
              font-family: Muli;
