UI fixes and policy & terms fix

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -127,7 +127,7 @@
             </div>
             <div class="col-md-6">
                 <div class="policy">
-                    <h2>Privacy Policy | Terms & Conditions </h2>
+                    <h2><a target="_blank" routerLink="/privacy-policy">Privacy Policy</a> | <a target="_blank" routerLink="/terms-and-conditions">Terms & Conditions </a></h2>
                 </div>
             </div>
         </div>
