--- a/src/app/modules/services/components/ui-development/ui-development.component.scss
+++ b/src/app/modules/services/components/ui-development/ui-development.component.scss
@@ -224,9 +224,10 @@
         font-family: Baskerville;
     }
     p{
-        font-size: 18px;
+        font-size: 16px;
         line-height: 30px;
         margin-top: 40px;
+        margin-left: 10px;
         font-family: Mulish;
     }
     .nav-pills{
@@ -234,9 +235,10 @@
         margin-top: -80px;
     }
     .li{
-        font-size: 18px;
+        font-size: 16px;
         font-family: Mulish;
         margin-top: 6px;
+        margin-left: 10px;
     }
     .flex-column{
         padding: 100px 0px;
