--- a/src/app/modules/services/components/interface-design/interface-design.component.scss
+++ b/src/app/modules/services/components/interface-design/interface-design.component.scss
@@ -233,6 +233,7 @@
         font-size: 16px;
         line-height: 30px;
         margin-top: 40px;
+        margin-left: 10px;
         font-family: Mulish;
     }
     .li{
@@ -323,6 +324,8 @@
 }
 .tab-content{
     width: 200%;
+    margin: 0px !important;
+    padding: 0px !important;
 }
 .nav-link{
     display: flex;
