--- a/src/app/modules/services/components/user-experience/user-experience.component.scss
+++ b/src/app/modules/services/components/user-experience/user-experience.component.scss
@@ -219,11 +219,14 @@
         font-size: 16px;
         line-height: 30px;
         margin-top: 40px;
+        margin-left: 10px;
         font-family: Mulish;
     }
     .li{
         font-size: 16px;
         margin-top: 6px;
+        margin-left: 10px;
+        font-family: Mulish;
     }
     @include media-breakpoint-down(md){
         padding: 75px 0px;
